[gd_scene load_steps=2 format=3 uid="uid://cd7r6kb0qbns0"]

[ext_resource type="Script" uid="uid://b26w3mfriq68j" path="res://scripts/items/item_manager.gd" id="1_55yk3"]

[node name="ItemManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55yk3")

[node name="ItemMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="ItemMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ItemMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="MessageDisplay" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
